load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

package(default_visibility = ["//visibility:public"])

RAYLET_RS_SRCS = glob([
    "src/**/*.rs",
]) + [
    "build.rs",
]

filegroup(
    name = "raylet_rs_sources",
    srcs = RAYLET_RS_SRCS + [
        "Cargo.toml",
        "//:Cargo.lock",
        "//:Cargo.toml",
    ],
)

genrule(
    name = "raylet_rs_cdylib_linux",
    srcs = [":raylet_rs_sources"],
    outs = ["libraylet_rs.so"],
    cmd = """
        set -euo pipefail
        RAYLET_RS_HEADER_OUT=skip \
          cargo build --manifest-path $(location Cargo.toml) --lib --release --locked \
          --target-dir $(@D)/cargo-target
        cp $(@D)/cargo-target/release/libraylet_rs.so $@
    """,
)

genrule(
    name = "raylet_rs_cdylib_darwin",
    srcs = [":raylet_rs_sources"],
    outs = ["libraylet_rs.dylib"],
    cmd = """
        set -euo pipefail
        RAYLET_RS_HEADER_OUT=skip \
          cargo build --manifest-path $(location Cargo.toml) --lib --release --locked \
          --target-dir $(@D)/cargo-target
        cp $(@D)/cargo-target/release/libraylet_rs.dylib $@
    """,
)

genrule(
    name = "raylet_rs_scheduler_header_linux",
    srcs = [":raylet_rs_sources"],
    outs = ["src/ray/raylet/scheduling/rust_scheduler_ffi.h"],
    cmd = """
        set -euo pipefail
        mkdir -p $$(dirname $@)
        RAYLET_RS_HEADER_OUT=$@ \
          cargo build --manifest-path $(location Cargo.toml) --lib --release --locked \
          --target-dir $(@D)/cargo-target
    """,
)

genrule(
    name = "raylet_rs_scheduler_header_darwin",
    srcs = [":raylet_rs_sources"],
    outs = ["src/ray/raylet/scheduling/rust_scheduler_ffi.h"],
    cmd = """
        set -euo pipefail
        mkdir -p $$(dirname $@)
        RAYLET_RS_HEADER_OUT=$@ \
          cargo build --manifest-path $(location Cargo.toml) --lib --release --locked \
          --target-dir $(@D)/cargo-target
    """,
)

filegroup(
    name = "raylet_rs_scheduler_header",
    srcs = select({
        "@platforms//os:osx": [":raylet_rs_scheduler_header_darwin"],
        "//conditions:default": [":raylet_rs_scheduler_header_linux"],
    }),
)

cc_import(
    name = "raylet_rs_cdylib",
    shared_library = select({
        "@platforms//os:osx": ":raylet_rs_cdylib_darwin",
        "//conditions:default": ":raylet_rs_cdylib_linux",
    }),
)

cc_library(
    name = "raylet_rs_scheduler_ffi",
    hdrs = [":raylet_rs_scheduler_header"],
    strip_include_prefix = "src",
    deps = [":raylet_rs_cdylib"],
)
