load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//bazel:python.bzl", "py_test_module_list")

py_library(
    name = "conftest",
    srcs = glob(["**/conftest.py"]),
    visibility = [
        "//python/ray/_common/tests:__subpackages__",
    ],
    deps = ["//python/ray/tests:conftest"],
)

# Small tests.
py_test_module_list(
    size = "small",
    files = [
        "test_deprecation.py",
        "test_formatters.py",
        "test_network_utils.py",
        "test_ray_option_utils.py",
        "test_retry.py",
        "test_signal_semaphore_utils.py",
        "test_signature.py",
        "test_utils.py",
        "test_wait_for_condition.py",
    ],
    tags = [
        "exclusive",
        "team:core",
    ],
    deps = [
        ":conftest",
        "//:ray_lib",
    ],
)

py_test(
    name = "test_filters",
    size = "medium",
    srcs = ["test_filters.py"],
    tags = [
        "exclusive",
        "medium_size_python_tests",
        "team:core",
    ],
    deps = [
        ":conftest",
        "//:ray_lib",
    ],
)

py_test_module_list(
    size = "large",
    files = [
        "test_usage_stats.py",
    ],
    tags = [
        "exclusive",
        "team:core",
    ],
    deps = [
        ":conftest",
        "//:ray_lib",
    ],
)
